[gd_scene load_steps=2 format=3 uid="uid://golden_ticket_popup"]

[ext_resource type="Script" path="res://scripts/ui/golden_ticket_popup.gd" id="1_golden"]

[node name="GoldenTicketPopup" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -60.0
offset_right = 140.0
offset_bottom = 60.0
custom_minimum_size = Vector2(280, 120)
script = ExtResource("1_golden")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "ALTIN BILET!"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "5.0 saniye"
horizontal_alignment = 1

[node name="CatchBtn" type="Button" parent="Margin/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "YAKALA!"
